5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1795_3138.log
== TEST (2019-05-30 16:05:14) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

xx = ent**7
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:48) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

xx = (ent**7)/ent
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:12) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

bb = (2 + 6 + 3 + 1) /4
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:21) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

bb = (2 + 6 + 3 + 1) /4
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:45) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

bb = (2 + 6 + 3 + 1)**7 /4
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:50) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = (2 + 6 + 3 + 1)**7 /4
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:09:08) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = (5.5 + 11.1 + 9.8 + 5.6 + 1.25) /5
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:09:41) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = (5.5 + 11.1 + 9.8 + 5.6 + (1.25-1)) /5
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:09:57) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = (5.5 + 11.1 + 9.8 + 5.6 + (1.25-1)) /5
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:01) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = (5.5 + 11.1 + 9.8 + 5.6 + (1.25-5)) /5
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:12) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = ((5.5)**7 + (11.1)**7 + (9.8)**7 + (5.6)**7 + (1.25)**7) /5
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:30) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = ((5.5)**7 + (11.1)**7 + (9.8)**7 + (5.6)**7 + (1.25)**7)**(1/7) /5
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:38) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = ((5.5)**7 + (11.1)**7 + (9.8)**7 + (5.6)**7 + (1.25)**7)**(1/7) 
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:49) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = ((5.5)**7 + (11.1)**7 + (9.8)**7 + (5.6)**7 + (1.25)**7)**(1/7) / 1.25
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:03) 
-- CODE:
from numpy import*
#ent = array(eval(input("Entrada: ")))

bb = ((5.5)**7 + (11.1)**7 + (9.8)**7 + (5.6)**7 + (1.25-1)**7)**(1/7) / 1.25
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:59) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

size(ent)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:00) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

size(ent)
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

size(ent)
print(ent)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

size(ent)
print(ent)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

size(ent)
print(ent)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:24) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

size(ent)
print(ent)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:46) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

bb = size(ent)
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:23) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))

bb = size(ent)
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:09) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
xx = some(ent)
bb = size(ent)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:35) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
xx = som(ent)
bb = size(ent)
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:01) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
tes2 = (ent[-1]-1)
m = ((tes + tes2)/ tes2)**(1/7)
print(m)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:52) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
tes2 = (ent[-1]-1)
m = ((tes + tes2)/ ent)**(1/7)
print(m)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:08) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
tes2 = (ent[-1]-1)
m = ((tes + tes2)/ ent)**(1/7)
print(round(m)
 
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:11) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
tes2 = (ent[-1]-1)
m = ((tes + tes2)/ ent)**(1/7)
print(round(m))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:36) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
tes2 = (ent[-1]-1)
m = ((tes + tes2)/ ent)**(1/7)
print(round(m, 2))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:01) 
-- CODE:
from numpy import*
ent = float(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
tes2 = (ent[-1]-1)
m = ((tes + tes2)/ ent)**(1/7)
print(round(m, 2))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:29) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent**7)
tes2 = (ent[-1]-1)
m = ((tes + tes2)/ ent)**(1/7)
print(m)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:23) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent**7)
#tes2 = (ent[-1])
m = ((tes )/ ent)**(1/7)
print(m)

pp = 
print()
 
-- ERROR:
File "XXXX", line 10
    pp = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:30) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent**7)
#tes2 = (ent[-1])
m = ((tes )/ ent)**(1/7)
print(m)


 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:23) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:**7])
#tes2 = (ent[-1])
m = ((tes )/ ent)**(1/7)
print(m)


 
-- ERROR:
File "XXXX", line 5
    tes = (ent[0:**7])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:34) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
#tes2 = (ent[-1])
m = ((tes )/ ent)**(1/7)
print(m)


 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:52) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
#tes2 = (ent[-1])
m = ((tes )/ ent)**(1/7)
print(m)


 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:06) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
tes2 = ((ent[0:] - 1)**7)
m = ((tes + tes2  )/ ent)**(1/7)
print(m)


 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:35) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent[0:]**7)
tes2 = ((ent[0:] - 1)**7)
m = ((tes + tes2  )/ bb)**(1/7)
print(m)


 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:39) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent**7)
tes2 = ((ent - 1)**7)
m = ((tes + tes2  )/ bb)**(1/7)
print(m)


 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:39) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent**7)
tes2 = [ent - 1]**7
m = ((tes + tes2  )/ bb)**(1/7)
print(m)


 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:08) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent**7)
tes2 = ([ent - 1])**7
m = ((tes + tes2  )/ bb)**(1/7)
print(m)


 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:17) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent**7)
tes2 = ([ent - 1])
m = ((tes + tes2  )/ bb)**(1/7)
print(m)

b = 2*5 + (2*10)*2 /15
print(b)

 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:48) 
-- CODE:
from numpy import*
ent = array(eval(input("Entrada: ")))
#xx = (ent)
bb = size(ent)
tes = (ent**7)
tes2 = ([ent - 1])
m = ((tes + tes2  )/ bb)**(1/7)
print(m)
b = 100/15
print(b)

 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
